--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phtml",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A tool for transforming HTML with JavaScript",
   "author": "Jonathan Neal <jonathantneal@hotmail.com>",
   "license": "CC0-1.0",
@@ -11,14 +11,16 @@
   "module": "index.mjs",
   "files": [
     "index.js",
-    "index.mjs"
+    "index.mjs",
+    "browser.js"
   ],
   "scripts": {
     "prebenchmark": "npm install posthtml reshape --no-save",
     "benchmark": "node --experimental-modules=true .benchmark.mjs",
+    "build": "rollup -c --silent",
     "docs": "jsdoc -c .jsdocrc -d .gh-pages",
     "prepublishOnly": "npm test",
-    "pretest": "rollup -c --silent",
+    "pretest": "npm run build",
     "test": "npm run test:js && npm run test:tape",
     "test:ec": "echint --ignore index.*.js test",
     "test:js": "eslint *.mjs src/*.mjs --cache --ignore-path .gitignore --quiet",
