--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "phtml",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A tool for transforming HTML with JavaScript",
   "author": "Jonathan Neal <jonathantneal@hotmail.com>",
   "license": "CC0-1.0",
   "repository": "jonathantneal/phtml",
-  "homepage": "https://github.com/jonathantneal/phtml#readme",
-  "bugs": "https://github.com/jonathantneal/phtml/issues",
+  "homepage": "https://github.com/phtmlorg/phtml#readme",
+  "bugs": "https://github.com/phtmlorg/phtml/issues",
   "main": "index.js",
   "module": "index.mjs",
   "files": [
