--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phtml",
-  "version": "2.0.4",
+  "version": "3.0.0",
   "description": "A tool for transforming HTML with JavaScript",
   "author": "Jonathan Neal <jonathantneal@hotmail.com>",
   "license": "CC0-1.0",
@@ -33,7 +33,7 @@
     "prepublishOnly": "npm test && npm run build",
     "pretest:tape": "npm run build:node",
     "test": "npm run test:js && npm run test:tape",
-    "test:js": "eslint *.mjs src/*.mjs --cache --ignore-path .gitignore --quiet",
+    "test:js": "eslint *.js src/*.js --cache --ignore-path .gitignore --quiet",
     "test:tape": "node --no-warnings --experimental-modules .tape"
   },
   "engines": {
@@ -48,12 +48,11 @@
     "@babel/preset-env": "^7.3.4",
     "@phtml/image-alt": "^2.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-async-to-promises": "^0.8.5",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
     "benchmark": "^2.1.4",
     "cross-env": "^5.2.0",
     "docdash": "^1.0.3",
-    "eslint": "^5.15.1",
+    "eslint": "^5.15.2",
     "eslint-config-dev": "^2.0.0",
     "jsdoc": "^3.5.5",
     "pre-commit": "^1.2.2",
