--- a/.editorconfig
+++ b/.editorconfig
@@ -7,9 +7,20 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[{.*,*.{json,md,yml}}]
+indent_size = 2
+indent_style = space
+
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{json,jsdocrc,md,yml}]
-indent_size = 2
-indent_style = space
+[{CONTRIBUTING.md,LICENSE.md}]
+indent_size = 3
+
+[{/packages/*/*.{js,map,mjs},**/node_modules/**}]
+charset = none
+end_of_line = none
+insert_final_newline = none
+trim_trailing_whitespace = none
+indent_style = none
+indent_size = none
