--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "phtml",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "A tool for transforming HTML with JavaScript",
   "author": "Jonathan Neal <jonathantneal@hotmail.com>",
   "license": "CC0-1.0",
   "repository": "jonathantneal/phtml",
   "homepage": "https://github.com/phtmlorg/phtml#readme",
   "bugs": "https://github.com/phtmlorg/phtml/issues",
+  "browser": "browser.js",
   "main": "index.js",
   "module": "index.mjs",
   "bin": {
     "phtml": "cli.js"
   },
   "files": [
+    "browser.development.js",
+    "browser.development.js.map",
+    "browser.js",
+    "cli.js",
     "index.js",
     "index.js.map",
     "index.mjs",
-    "index.mjs.map",
-    "browser.js",
-    "cli.js"
+    "index.mjs.map"
   ],
   "scripts": {
     "prebenchmark": "npm install posthtml reshape --no-save",
@@ -29,7 +32,7 @@
     "build:browser:min": "cross-env NODE_ENV=browsermin rollup --config --silent",
     "build:cli": "cross-env NODE_ENV=cli rollup --config --silent",
     "build:node": "rollup --config --silent",
-    "docs": "jsdoc -c .jsdocrc -d .gh-pages",
+    "docs": "jsdoc --configure .jsdocrc --destination .gh-pages",
     "prepublishOnly": "npm test && npm run build",
     "pretest:tape": "npm run build:node",
     "test": "npm run test:js && npm run test:tape",
@@ -43,23 +46,23 @@
     "parse5": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@phtml/image-alt": "^2.0.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
+    "@phtml/image-alt": "^3.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
     "benchmark": "^2.1.4",
     "cross-env": "^5.2.0",
     "docdash": "^1.0.3",
-    "eslint": "^5.15.2",
+    "eslint": "^5.16.0",
     "eslint-config-dev": "^2.0.0",
     "jsdoc": "^3.5.5",
     "pre-commit": "^1.2.2",
-    "rollup": "^1.6.0",
+    "rollup": "^1.10.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-terser": "^4.0.4"
   },
   "eslintConfig": {
