--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phtml",
-  "version": "3.2.1",
+  "version": "3.3.0",
   "description": "A tool for transforming HTML with JavaScript",
   "author": "Jonathan Neal <jonathantneal@hotmail.com>",
   "license": "CC0-1.0",
@@ -37,7 +37,7 @@
     "pretest:tape": "npm run build:node",
     "test": "npm run test:js && npm run test:tape",
     "test:js": "eslint *.js src/*.js --cache --ignore-path .gitignore --quiet",
-    "test:tape": "node --no-warnings --experimental-modules .tape"
+    "test:tape": "node test"
   },
   "engines": {
     "node": ">=6.0.0"
@@ -46,20 +46,19 @@
     "parse5": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@phtml/image-alt": "^3.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
     "benchmark": "^2.1.4",
     "cross-env": "^5.2.0",
-    "docdash": "^1.0.3",
+    "docdash": "^1.1.0",
     "eslint": "^5.16.0",
-    "eslint-config-dev": "^2.0.0",
     "jsdoc": "^3.5.5",
     "pre-commit": "^1.2.2",
-    "rollup": "^1.10.0",
+    "rollup": "^1.11.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-node-resolve": "^4.2.3",
